<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="com.example.myclock.utilities.Utility" />
        <import type="com.example.myclock.utilities.SnoozeUtils"/>
        <variable
            name="alarmsViewModel"
            type="com.example.myclock.viewmodels.AlarmsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AlarmFormFragment">

        <!-- Form Fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Time Field -->
            <LinearLayout
                android:id="@+id/llTimeField"
                style="@style/FormFieldLayoutStyle">

                <TextView
                    style="@style/FormFieldTextStyle.Label"
                    android:text="@string/label_time" />

                <TextView
                    android:id="@+id/tvTime"
                    style="@style/FormFieldTextStyle.Value"
                    android:text="@{Utility.INSTANCE.timeToString(alarmsViewModel.selectedAlarm.time)}" />
            </LinearLayout>

            <View style="@style/MyDividerStyle" />

            <!-- Repeat Field -->
            <LinearLayout
                android:id="@+id/llRepeatField"
                style="@style/FormFieldLayoutStyle">

                <TextView
                    style="@style/FormFieldTextStyle.Label"
                    android:text="@string/label_repeat" />

                <TextView
                    android:id="@+id/tvRepeat"
                    style="@style/FormFieldTextStyle.Value"
                    android:text="@{Utility.INSTANCE.getRepeatLabel(alarmsViewModel.selectedAlarm.repeat)}" />
            </LinearLayout>

            <View style="@style/MyDividerStyle" />

            <!-- Sound Field -->
            <LinearLayout
                android:id="@+id/llSoundField"
                style="@style/FormFieldLayoutStyle">

                <TextView
                    style="@style/FormFieldTextStyle.Label"
                    android:text="@string/label_sound" />

                <TextView
                    android:id="@+id/tvSound"
                    style="@style/FormFieldTextStyle.Value"
                    android:text="@string/placeholder_sound" />
            </LinearLayout>

            <View style="@style/MyDividerStyle" />

            <!-- Vibrate Field -->
            <LinearLayout
                android:id="@+id/llVibrateField"
                style="@style/FormFieldLayoutStyle"
                android:weightSum="0">

                <TextView
                    style="@style/FormFieldTextStyle.Label"
                    android:layout_width="match_parent"
                    android:text="@string/label_vibrate" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/smVibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="@={alarmsViewModel.selectedAlarm.vibrate}"/>
            </LinearLayout>

            <View style="@style/MyDividerStyle" />

            <!-- Label Field -->
            <LinearLayout
                android:id="@+id/llLabelField"
                style="@style/FormFieldLayoutStyle">

                <TextView
                    style="@style/FormFieldTextStyle.Label"
                    android:text="@string/label_label" />

                <TextView
                    android:id="@+id/tvLabel"
                    style="@style/FormFieldTextStyle.Value"
                    android:text="@{alarmsViewModel.selectedAlarm.label}" />
            </LinearLayout>

            <View style="@style/MyDividerStyle" />

            <!-- Ring Duration Field -->
            <LinearLayout
                android:id="@+id/llRingDurationField"
                style="@style/FormFieldLayoutStyle">

                <TextView
                    style="@style/FormFieldTextStyle.Label"
                    android:text="@string/label_ring_duration" />

                <TextView
                    android:id="@+id/tvRingDuration"
                    style="@style/FormFieldTextStyle.Value"
                    android:text="@{Utility.INSTANCE.getRingDurationLabel(alarmsViewModel.selectedAlarm.ringDuration)}" />
            </LinearLayout>

            <View style="@style/MyDividerStyle" />

            <!-- Snooze Duration Field -->
            <LinearLayout
                android:id="@+id/llSnoozeDurationField"
                style="@style/FormFieldLayoutStyle">

                <TextView
                    style="@style/FormFieldTextStyle.Label"
                    android:text="@string/label_snooze_duration" />

                <TextView
                    android:id="@+id/tvSnoozeDuration"
                    style="@style/FormFieldTextStyle.Value"
                    android:text="@{SnoozeUtils.INSTANCE.getSnoozeLabel(alarmsViewModel.selectedAlarm)}" />
            </LinearLayout>

            <View style="@style/MyDividerStyle" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>