<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AlarmFormActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAlarmForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Form Fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbAlarmForm">

        <!-- Label Field -->
        <LinearLayout
            android:id="@+id/llLabelField"
            style="@style/FormFieldLayoutStyle">
            <TextView
                style="@style/FormFieldTextStyle.Label"
                android:text="@string/label_label" />
            <TextView
                android:id="@+id/tvLabel"
                style="@style/FormFieldTextStyle.Value"
                android:text="@string/placeholder_alarm_label" />
        </LinearLayout>

        <View style="@style/MyDividerStyle" />

        <!-- Vibrate Field -->
        <LinearLayout style="@style/FormFieldLayoutStyle">
            <TextView
                style="@style/FormFieldTextStyle.Label"
                android:text="@string/label_vibrate" />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/smVibrate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </LinearLayout>

        <View style="@style/MyDividerStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>